# 3d-Renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
dependencies/glad/: glad.h
examples/: linear_algebra.cpp  linear_algebra.h
src/: config.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
